# sumo-lang

./: README.md  config.mak  makefile  sumo.opam
docs/: interop.md  semantics.md  syntax.md  types.md
lib/: makefile  stdio.sumo  stdio_glue.c
src/: README.md  ast.ml  cast_value.ml  class_basic.sumo  compile_assign.ml  compile_block.ml  compile_expr.ml  compile_function.ml  compile_stmt.ml  compile_type.ml  dune  llvm_compiler.ml  llvm_of_ast.ml  llvm_of_ssa.ml  namer.ml  pattern_match.ml  scope.ml  sema.ml  ssa.ml  ssa_context.ml  ssa_of_ast.ml  sumo_lexer.mll  sumo_parser.mly  top_down_parser.ml  utils.ml  variant_match.sumo  visibility.ml
testcases/: .gitignore  call_c  call_c.ll  call_c.sumo  call_user_function.sumo  class_basic.sumo  class_method.sumo  for_loop.sumo  glue.c  if_then.sumo  import.sumo  import_this.sumo  makefile  optional_struct.sumo  return_arith_assign.sumo  return_bitwise.sumo  return_bool.sumo  return_double_cast.sumo  return_explicit_var.sumo  return_from_block.sumo  return_int.ll  return_int.sumo  return_int_arithmetic.sumo  return_int_cast.sumo  return_optional.sumo  return_optional_none.sumo  return_optional_some.sumo  return_shift.sumo  return_var  return_var.ll  return_var.sumo  simple_max.sumo  struct.sumo  struct_cast.sumo  var_assign_and_return.sumo  var_assign_cast.sumo  variant_basic.sumo  variant_match.sumo  while.sumo
